# waveshare_modbus_commander

./: .gitignore  CMakeLists.txt  CMakeListsCPackConfiguration.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml  publish-release.yml  release-build.yml  release.yml
build-fetchcheck/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/: toolchain-linux-aarch64.cmake
include/waveshare_modbus_commander/: cli_parser.hpp  create_modbus_connection.hpp  network_scanner.hpp  portable_print.hpp
packaging/: postinst.in  prerm.in
proto/: DESIGN_DISCUSSION.md  waveshare_commander.proto
src/: cli_parser.cpp  create_modbus_connection.cpp  network_scanner.cpp  waveshare_modbus_commander.cpp
